# Parla

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/architecture/: error-handling-and-logging.md  implementation-plan.md  overview.md  ui-implementation-tasks.md
docs/code-review/: principal-review.md
docs/design/: discussion-points.md  feedback_mockup.html  home_mockup.html  phase_a_mockup.html  phase_c_mockup.html  run_through_mockup.html
docs/requirements/: 01-concept.md  02-learning-cycle.md  03-session-structure.md  04-source-management.md  05-learning-items.md  06-srs-mastery.md  07-hint-system.md  08-progress-motivation.md  09-ux-screens.md  10-llm-calls.md  11-latency-strategy.md  12-evaluation-criteria.md  13-settings-policies.md  14-technical-verification.md  README.md  glossary.md
docs/verification/: README.md
src/parla/: __main__.py  container.py  event_bus.py  logging_config.py
tests/: conftest.py  test_event_bus.py  test_slice1_integration.py  test_slice2_integration.py  test_slice3_integration.py  test_slice4_integration.py  test_slice5_integration.py
tests/adapters/: test_azure_pronunciation.py  test_elevenlabs_tts.py  test_gemini_feedback.py  test_gemini_overlapping_lag.py  test_gemini_passage_generation.py  test_gemini_retry_judgment.py  test_gemini_review_judgment.py  test_gemini_variation.py  test_local_audio_storage.py  test_sqlite_feedback_repository.py  test_sqlite_learning_item_repository.py  test_sqlite_practice_repository.py  test_sqlite_review_attempt_repository.py  test_sqlite_session_repository.py  test_sqlite_source_repository.py  test_sqlite_user_settings_repository.py  test_sqlite_variation_repository.py
tests/domain/: test_feedback.py  test_lag_detection.py  test_learning_item.py  test_passage.py  test_practice.py  test_session.py  test_similarity.py  test_source.py  test_srs.py  test_timing.py  test_user_settings.py  test_wpm.py
tests/ui/: test_theme.py  (+2 more)
(+302 files in other folders)
