[project]
name = "parla"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=2.42.0",
    "pydantic>=2.12.5",
    "PySide6>=6.7",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parla"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"src/parla/adapters/gemini_passage_generation.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["parla"]

[[tool.mypy.overrides]]
module = ["elevenlabs.*", "azure.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "litellm>=1.83.3",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-qt>=4.4.0",
    "ruff>=0.15.9",
]
